# CyanFlow

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
App/: CMakeLists.txt  main.cpp
CMake/: AddLibrary.cmake  AddTests.cmake  BuildUnitTests.cmake  Deploy.cmake
Lib/: CMakeLists.txt
Lib/Core/: CMakeLists.txt
Lib/Core/Include/Core/: Attribute.hpp  BuildConfig.hpp  Command.hpp  DataTypes.hpp  Document.hpp  EventBus.hpp  InputAttribute.hpp  Node.hpp  OutputAttribute.hpp  Scene.hpp  TypeDescriptors.hpp  TypeRegistry.hpp  TypedAttribute.hpp  UndoStack.hpp
Lib/Core/Include/Core/Commands/: AddConnectionCommand.hpp
Lib/Core/Include/Core/Events/: AttributeEvent.hpp  ConnectionAddedEvent.hpp
Lib/Core/Include/Core/Nodes/: AddNode.hpp
Lib/Core/Source/: Attribute.cpp  Command.cpp  Scene.cpp  UndoStack.cpp
Lib/Core/Source/Nodes/: AddNode.cpp
Lib/Framework/: CMakeLists.txt
Lib/Framework/Include/Framework/: Application.hpp  ApplicationContext.hpp
Lib/Framework/Source/: Application.cpp
Lib/Ui/: CMakeLists.txt
Lib/Ui/Include/Ui/: AttributeEditor.hpp  CollapsibleWidget.hpp  GuiManager.hpp  MainWindow.hpp  NodeEditor.hpp  QtApplicationContext.hpp  SelectionManager.hpp
Lib/Ui/Include/Ui/Models/: QtAttribute.hpp  QtNode.hpp
Lib/Ui/Source/: AttributeEditor.cpp  CollapsibleWidget.cpp  GuiManager.cpp  MainWindow.cpp  NodeEditor.cpp  QtApplicationContext.cpp
Lib/Ui/Source/Models/: QtAttribute.cpp  QtNode.cpp
Tests/: CMakeLists.txt
Tests/CoreTests/: AttributeTests.cpp  CMakeLists.txt  TypeRegistryTests.cpp  UndoStackTests.cpp
